--- a/k8s/apps/ac-hacking-2024/back/externalsecret.yaml
+++ b/k8s/apps/ac-hacking-2024/back/externalsecret.yaml
@@ -13,5 +13,5 @@ spec:
     - secretKey: postgres_password
       remoteRef:
         key: postgres_passwords
-        property: ac_hacking
+        property: ac-hacking
 
