--- a/k8s/apps/ac-hacking-2024/kustomization.yaml
+++ b/k8s/apps/ac-hacking-2024/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: default
+namespace: ac-hacking-2024
 commonLabels:
   app: ac-hacking-2024
 resources:
