--- a/k8s/apps/ac-hacking-2024/back/kustomization.yaml
+++ b/k8s/apps/ac-hacking-2024/back/kustomization.yaml
@@ -1,7 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-commonLabels:
-  app: ac-hacking-2024-back
+labels:
+- includeSelectors: true
+  pairs:
+    app: ac-hacking-2024-back
 resources:
   - deployment.yaml
   - ingress.yaml
