--- a/k8s/apps/ac-hacking-2024/kustomization.yaml
+++ b/k8s/apps/ac-hacking-2024/kustomization.yaml
@@ -1,8 +1,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: ac-hacking-2024
-commonLabels:
-  app: ac-hacking-2024
 resources:
-  - back
-  - front
+- back
+- front
+labels:
+- includeSelectors: true
+  pairs:
+    app: ac-hacking-2024
