--- a/k8s/apps/proxmox-webui/kustomization.yaml
+++ b/k8s/apps/proxmox-webui/kustomization.yaml
@@ -1,8 +1,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: default
-commonLabels:
-  app: proxmox-webui
+labels:
+- includeSelectors: true
+  pairs:
+    app: proxmox-webui
 resources:
   - deployment.yaml
   - ingress.yaml
