--- a/k8s/apps/code-server-test/codeserver.yaml
+++ b/k8s/apps/code-server-test/codeserver.yaml
@@ -5,7 +5,7 @@ metadata:
     app.kubernetes.io/name: codeserverdeployment
   name: code
 spec:
-  replicas: 4
+  replicas: 1
   template:
     spec:
       storageSize: 1Gi
@@ -23,3 +23,5 @@ spec:
         - name: ghcr-login-secret
       domain: "walnuts.dev"
       ingressClassName: "nginx"
+      nodeSelector:
+        kubernetes.io/arch: amd64
