--- a/k8s/apps/ac-hacking-2024/back/deployment.yaml
+++ b/k8s/apps/ac-hacking-2024/back/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: ac-hacking-2024-back
-          image: ghcr.io/walnuts1018/2024-ac-hacking:932de43aada8967ab673dc1355c5b45d648aa8b6-9 # {"$imagepolicy": "default:ac-hacking-2024-back"}
+          image: ghcr.io/walnuts1018/2024-ac-hacking:932de43aada8967ab673dc1355c5b45d648aa8b6-9 # {"$imagepolicy": "ac-hacking-2024:ac-hacking-2024-back"}
           ports:
             - containerPort: 8080
           resources:
