--- a/k8s/apps/code-server-test/codeserver.yaml
+++ b/k8s/apps/code-server-test/codeserver.yaml
@@ -2,26 +2,33 @@ apiVersion: cs.walnuts.dev/v1alpha1
 kind: CodeServerDeployment
 metadata:
   labels:
-    app.kubernetes.io/name: codeserverdeployment
-  name: code
+    app.kubernetes.io/name: codebox
+  name: codebox-line2
 spec:
-  replicas: 1
+  replicas: 15
   template:
     spec:
-      storageSize: 1Gi
+      storageSize: 3Gi
       initPlugins:
         git:
-          repourl: "github.com/walnuts1018/http-dump"
-          branch: "master"
+          repourl: "github.com/walnuts1018/2024-golang-linebot"
+          branch: "main"
         copyDefaultConfig: {}
         copyHome: {}
       envs:
         - name: LANGUAGE_DEFAULT
           value: "ja"
-      image: "ghcr.io/kmc-jp/code-server-images-golang:latest"
+      image: "ghcr.io/kmc-jp/code-server-images-golang:f1c334c052db29dab859b4b333d3262819ab3421-44" # {"$imagepolicy": "code-server:codebox-policy"}
       imagePullSecrets:
-        - name: ghcr-login-secret
+        - name: code-server-ghcr-login-secret
       domain: "walnuts.dev"
+      publicProxyPorts:
+      - 8080
       ingressClassName: "nginx"
-      nodeSelector:
-        kubernetes.io/arch: amd64
+      resources:
+        limits:
+          cpu: "2000m"
+          memory: "2Gi"
+        requests:
+          cpu: "200m"
+          memory: "512Mi"
