--- a/k8s/apps/code-server-test/codeserver.yaml
+++ b/k8s/apps/code-server-test/codeserver.yaml
@@ -20,7 +20,7 @@ spec:
           value: "ja"
       image: "ghcr.io/kmc-jp/code-server-images-golang:f1c334c052db29dab859b4b333d3262819ab3421-44" # {"$imagepolicy": "code-server:codebox-policy"}
       imagePullSecrets:
-        - name: code-server-ghcr-login-secret
+        - name: ghcr-login-secret
       domain: "walnuts.dev"
       publicProxyPorts:
       - 8080
