--- a/k8s/apps/code-server-test/codeserver.yaml
+++ b/k8s/apps/code-server-test/codeserver.yaml
@@ -3,33 +3,31 @@ kind: CodeServerDeployment
 metadata:
   labels:
     app.kubernetes.io/name: codebox
-  name: codebox-line
+  name: moneyforward-bak
 spec:
-  replicas: 1
+  replicas: 5
   template:
     spec:
       storageSize: 3Gi
-      initCommand: "cd work && go mod download"
+      storageClassName: local-path
       initPlugins:
         git:
-          repourl: "github.com/walnuts1018/2024-golang-linebot"
+          repourl: "github.com/kmc-jp/moneyforward-2024-04-25"
           branch: "main"
         copyDefaultConfig: {}
         copyHome: {}
       envs:
         - name: LANGUAGE_DEFAULT
           value: "ja"
-      image: "ghcr.io/kmc-jp/code-server-images-golang:f1c334c052db29dab859b4b333d3262819ab3421-44" 
+      image: "ghcr.io/kmc-jp/code-server-images-golang:ab1aae4a8580953b22c0064b8ca4a01284833ed6-48" 
       imagePullSecrets:
         - name: ghcr-login-secret
       domain: "walnuts.dev"
-      publicProxyPorts:
-      - 8080
       ingressClassName: "nginx"
       resources:
         limits:
           cpu: "2000m"
-          memory: "2Gi"
+          memory: "4Gi"
         requests:
           cpu: "200m"
           memory: "512Mi"
