add longhorn metrics

--- a/k8s/apps/longhorn/helm.yaml
+++ b/k8s/apps/longhorn/helm.yaml
@@ -50,3 +50,6 @@ spec:
         - key: "node-role.kubernetes.io/control-plane"
           operator: "Exists"
           effect: "NoSchedule"
+    metrics:
+      serviceMonitor:
+        enabled: true
