--- a/k8s/apps/walnuts-dev-www-redirect/deployment.yaml
+++ b/k8s/apps/walnuts-dev-www-redirect/deployment.yaml
@@ -41,3 +41,4 @@ spec:
                 path: virtualhost/virtualhost.conf
         - name: log
           emptyDir: {}
+      priorityClassName: high
