--- a/k8s/apps/postgresql-default/users/users.yaml
+++ b/k8s/apps/postgresql-default/users/users.yaml
@@ -57,3 +57,8 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: ac-hacking
+---
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: y
