--- a/k8s/apps/y-2024/ingress.yaml
+++ b/k8s/apps/y-2024/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: github-readme-stats
+  name: y-2024
 spec:
   ingressClassName: "nginx"
   rules:
