--- a/k8s/apps/code-server-test/codeserver.yaml
+++ b/k8s/apps/code-server-test/codeserver.yaml
@@ -3,23 +3,24 @@ kind: CodeServerDeployment
 metadata:
   labels:
     app.kubernetes.io/name: codebox
-  name: codebox-moneyforward-bak
+  name: codebox-y-bak
 spec:
-  replicas: 20
+  replicas: 5
   template:
     spec:
       storageSize: 3Gi
       storageClassName: local-path
+      initCommand: "npm install"
       initPlugins:
         git:
-          repourl: "github.com/kmc-jp/moneyforward-2024-04-25"
+          repourl: "github.com/walnuts1018/2024-y"
           branch: "main"
         copyDefaultConfig: {}
         copyHome: {}
       envs:
         - name: LANGUAGE_DEFAULT
           value: "ja"
-      image: "ghcr.io/kmc-jp/code-server-images-golang:ab1aae4a8580953b22c0064b8ca4a01284833ed6-48" 
+      image: "ghcr.io/kmc-jp/code-server-images-node:ab1aae4a8580953b22c0064b8ca4a01284833ed6-49" 
       imagePullSecrets:
         - name: ghcr-login-secret
       domain: "walnuts.dev"
