--- a/renovate.json5
+++ b/renovate.json5
@@ -24,7 +24,7 @@
       matchStringsStrategy: "any",
       matchStrings: [
         "https:\\/\\/github\\.com\\/(?<depName>.*?)\\/releases\\/download\\/(?<currentValue>\\S+)\\/.*\\s*",
-        "https:\\/\\/raw\\.githubusercontent\\.com\\/(?<depName>.*?)\\/(?<currentValue>\\S+)\\/.*\\s*",
+        "https:\\/\\/raw\\.githubusercontent\\.com\\/(?<depName>.+\\/.+?)\\/(?<currentValue>\\S+)\\/.*\\s*",
       ],
       datasourceTemplate: "github-tags",
     },
