--- a/k8s/namespaces/namespaces.yaml
+++ b/k8s/namespaces/namespaces.yaml
@@ -77,3 +77,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: ac-hacking-2024
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: photoprism
