--- a/k8s/apps/photoprism/externalsecret.yaml
+++ b/k8s/apps/photoprism/externalsecret.yaml
@@ -14,9 +14,9 @@ spec:
       type: Opaque
       data:
         PHOTOPRISM_DATABASE_DSN: photoprism:{{ .dbpassword }}@tcp(mariadb.photoprism.svc.cluster.local:3306)/photoprism?charset=utf8mb4,utf8&parseTime=true
-        PHOTOPRISM_ADMIN_PASSWORD: "{{ .admin-password }}"
+        PHOTOPRISM_ADMIN_PASSWORD: "{{ .adminpassword }}"
   data:
-    - secretKey: admin-password
+    - secretKey: adminpassword
       remoteRef:
         key: photoprism
         property: admin-password
