--- a/k8s/apps/photoprism/statefulset.yaml
+++ b/k8s/apps/photoprism/statefulset.yaml
@@ -55,6 +55,7 @@ spec:
             port: http
       volumes:
       - name: originals
+        readOnly: true
         hostPath:
           path: /mnt/data/share/CameraRoll
           type: Directory
