--- a/k8s/apps/photoprism/statefulset.yaml
+++ b/k8s/apps/photoprism/statefulset.yaml
@@ -26,6 +26,8 @@ spec:
         env:
         # - name: PHOTOPRISM_DEBUG
         #   value: "true"
+        - name: PHOTOPRISM_ORIGINALS_LIMIT
+          value: "-1"
         - name: PHOTOPRISM_DATABASE_DRIVER
           value: mysql
         - name: PHOTOPRISM_HTTP_HOST
