--- a/k8s/apps/photoprism/statefulset.yaml
+++ b/k8s/apps/photoprism/statefulset.yaml
@@ -28,6 +28,8 @@ spec:
         #   value: "true"
         - name: PHOTOPRISM_ORIGINALS_LIMIT
           value: "-1"
+        - name: PHOTOPRISM_DETECT_NSFW
+          value: "true"
         - name: PHOTOPRISM_DATABASE_DRIVER
           value: mysql
         - name: PHOTOPRISM_HTTP_HOST
