--- a/k8s/apps/nextcloud/helm.yaml
+++ b/k8s/apps/nextcloud/helm.yaml
@@ -60,14 +60,14 @@ spec:
         usernameKey: admin-username
         passwordKey: admin-password
       datadir: /var/www/html/data
-      # extraVolumes:
-      #   - name: samba-data
-      #     hostPath:
-      #       path: /mnt/data/share
-      #       type: Directory
-      # extraVolumeMounts:
-      #   - name: samba-data
-      #     mountPath: /mnt/data/share
+      extraVolumes:
+        - name: samba-data
+          hostPath:
+            path: /mnt/data/share
+            type: Directory
+      extraVolumeMounts:
+        - name: samba-data
+          mountPath: /mnt/data/share
       extraEnv:
         - name: TRUSTED_PROXIES
           value: "103.31.4.0/22 141.101.64.0/18 108.162.192.0/18 190.93.240.0/20 188.114.96.0/20 197.234.240.0/22 198.41.128.0/17 162.158.0.0/15 104.16.0.0/13 104.24.0.0/14 172.64.0.0/13 131.0.72.0/22"
