--- a/k8s/apps/photoprism/statefulset.yaml
+++ b/k8s/apps/photoprism/statefulset.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: photoprism
-        image: photoprism/photoprism:latest
+        image: photoprism/photoprism:240420
         resources:
           requests:
             cpu: 100m
