--- a/k8s/apps/photoprism/pvc.yaml
+++ b/k8s/apps/photoprism/pvc.yaml
@@ -13,6 +13,18 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
+  name: photoprism-cache
+spec:
+  storageClassName: local-path
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 12Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
   name: photoprism-storage
 spec:
   storageClassName: longhorn
