--- a/k8s/apps/photoprism/pvc.yaml
+++ b/k8s/apps/photoprism/pvc.yaml
@@ -33,3 +33,15 @@ spec:
   resources:
     requests:
       storage: 16Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: photoprism-storage2
+spec:
+  storageClassName: longhorn
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 8Gi
