--- a/k8s/apps/nextcloud/helm.yaml
+++ b/k8s/apps/nextcloud/helm.yaml
@@ -68,6 +68,9 @@ spec:
       extraVolumeMounts:
         - name: samba-data
           mountPath: /mnt/data/share
+      podSecurityContext:
+        fsGroup: 33
+        fsGroupChangePolicy: "OnRootMismatch"
       extraEnv:
         - name: TRUSTED_PROXIES
           value: "103.31.4.0/22 141.101.64.0/18 108.162.192.0/18 190.93.240.0/20 188.114.96.0/20 197.234.240.0/22 198.41.128.0/17 162.158.0.0/15 104.16.0.0/13 104.24.0.0/14 172.64.0.0/13 131.0.72.0/22"
