--- a/k8s/apps/photoprism/mariadb/helm.yaml
+++ b/k8s/apps/photoprism/mariadb/helm.yaml
@@ -30,6 +30,7 @@ spec:
       service:
         type: LoadBalancer
         loadBalancerIP: "192.168.0.135"
+      resourcesPreset: "medium"
     secondary:
       persistence:
         enabled: true
@@ -38,3 +39,4 @@ spec:
         size: 8Gi
       service:
         type: ClusterIP
+      resourcesPreset: "medium"
