--- a/k8s/apps/photoprism/cronjob.yaml
+++ b/k8s/apps/photoprism/cronjob.yaml
@@ -8,6 +8,7 @@ spec:
     spec:
       template:
         spec:
+          restartPolicy: OnFailure
           containers:
           - name: photoprism
             image: photoprism/photoprism:240420
