--- a/k8s/apps/loki/helm.yaml
+++ b/k8s/apps/loki/helm.yaml
@@ -25,7 +25,7 @@ spec:
         type: filesystem
       schemaConfig:
         configs:
-        - from: "2024-01-01"
+        - from: '2024-01-01'
           store: tsdb
           index:
             prefix: loki_index_
