--- a/k8s/apps/metallb-ipaddress/l2advertisment.yaml
+++ b/k8s/apps/metallb-ipaddress/l2advertisment.yaml
@@ -3,3 +3,30 @@ kind: L2Advertisement
 metadata:
   name: default
   namespace: metallb-system
+spec:
+  nodeSelector:
+  - kubernetes.io/hostname: cake
+  interfaces:
+  - enp2s0
+---
+apiVersion: metallb.io/v1beta1
+kind: L2Advertisement
+metadata:
+  name: default
+  namespace: metallb-system
+spec:
+  nodeSelector:
+  - kubernetes.io/hostname: donut
+  interfaces:
+  - vlanbr0
+---
+apiVersion: metallb.io/v1beta1
+kind: L2Advertisement
+metadata:
+  name: default
+  namespace: metallb-system
+spec:
+  nodeSelector:
+  - kubernetes.io/hostname: snow
+  interfaces:
+  - eth0
