--- a/k8s/apps/metallb-ipaddress/l2advertisment.yaml
+++ b/k8s/apps/metallb-ipaddress/l2advertisment.yaml
@@ -1,7 +1,7 @@
 apiVersion: metallb.io/v1beta1
 kind: L2Advertisement
 metadata:
-  name: default
+  name: default-cake
   namespace: metallb-system
 spec:
   nodeSelector:
@@ -12,7 +12,7 @@ spec:
 apiVersion: metallb.io/v1beta1
 kind: L2Advertisement
 metadata:
-  name: default
+  name: default-donut
   namespace: metallb-system
 spec:
   nodeSelector:
@@ -23,7 +23,7 @@ spec:
 apiVersion: metallb.io/v1beta1
 kind: L2Advertisement
 metadata:
-  name: default
+  name: default-snow
   namespace: metallb-system
 spec:
   nodeSelector:
