--- a/k8s/apps/code-server/codeserver.yaml
+++ b/k8s/apps/code-server/codeserver.yaml
@@ -3,24 +3,24 @@ kind: CodeServerDeployment
 metadata:
   labels:
     app.kubernetes.io/name: codebox
-  name: codebox-y-bak
+  name: codebox-httpdump
 spec:
   replicas: 1
   template:
     spec:
       storageSize: 3Gi
       storageClassName: local-path
-      initCommand: 'cd work && export NVM_DIR="$HOME/.nvm" && [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" && npm install'
+      initCommand: 'cd work && go mod tidy'
       initPlugins:
         git:
-          repourl: "github.com/walnuts1018/2024-y"
+          repourl: "github.com/walnuts1018/http-dump"
           branch: "frontend"
         copyDefaultConfig: {}
         copyHome: {}
       envs:
         - name: LANGUAGE_DEFAULT
           value: "ja"
-      image: "ghcr.io/kmc-jp/code-server-images-node:ab1aae4a8580953b22c0064b8ca4a01284833ed6-49" 
+      image: "ghcr.io/kmc-jp/code-server-images-golang:ab1aae4a8580953b22c0064b8ca4a01284833ed6-49" 
       imagePullSecrets:
         - name: ghcr-login-secret
       domain: "walnuts.dev"
