--- a/k8s/apps/cert-manager/helm.yaml
+++ b/k8s/apps/cert-manager/helm.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   url: https://charts.jetstack.io
 ---
-apiVersion: helm.toolkit.fluxcd.io/v2beta2
+apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: cert-manager
