--- a/k8s/apps/code-server-operator/helm.yaml
+++ b/k8s/apps/code-server-operator/helm.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   url: https://walnuts1018.github.io/code-server-operator/
 ---
-apiVersion: helm.toolkit.fluxcd.io/v2beta2
+apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: code-server-operator
