--- a/k8s/apps/longhorn-oauth2-proxy/helm.yaml
+++ b/k8s/apps/longhorn-oauth2-proxy/helm.yaml
@@ -1,12 +1,12 @@
 ---
-apiVersion: source.toolkit.fluxcd.io/v1beta1
+apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: longhorn-oauth2-proxy
 spec:
   url: https://oauth2-proxy.github.io/manifests
 ---
-apiVersion: helm.toolkit.fluxcd.io/v2beta2
+apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: longhorn-oauth2-proxy
