--- a/k8s/apps/vault/helm.yaml
+++ b/k8s/apps/vault/helm.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: source.toolkit.fluxcd.io/v1beta1
+apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: vault
@@ -7,7 +7,7 @@ spec:
   interval: 1m
   url: https://helm.releases.hashicorp.com
 ---
-apiVersion: helm.toolkit.fluxcd.io/v2beta2
+apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: vault
