--- a/k8s/apps/walnuts-dev/deployment.yaml
+++ b/k8s/apps/walnuts-dev/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: walnuts-dev
 spec:
-  replicas: 3
+  replicas: 2
   selector:
     matchLabels:
       app: walnuts-dev
@@ -27,3 +27,13 @@ spec:
             - name: NEXT_PUBLIC_GA_ID
               value: G-NB6F68ZQ9P
       priorityClassName: high
+      affinity:
+        nodeAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 100
+            preference:
+              matchExpressions:
+                - key: kubernetes.io/hostname
+                  operator: NotIn
+                  values:
+                    - donut
