fix archivebox command

--- a/k8s/apps/archivebox/deployment.yaml
+++ b/k8s/apps/archivebox/deployment.yaml
@@ -21,10 +21,7 @@ spec:
         - name: archivebox-init
           image: archivebox/archivebox:0.7.2 # {"$imagepolicy": "archivebox:archivebox"}
           imagePullPolicy: IfNotPresent
-          command:
-            - pnpm
-            - run
-            - init
+          args: ["init"]
           volumeMounts:
             - name: archivebox-data
               mountPath: /data
