--- a/k8s/apps/archivebox/kustomization.yaml
+++ b/k8s/apps/archivebox/kustomization.yaml
@@ -1,9 +1,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: default
+namespace: archivebox
 resources:
   - deployment.yaml
   - service.yaml
   - pvc.yaml
   - image-policy.yaml
   - ./oauth2-proxy
+  - ./fess
