--- a/k8s/namespaces/namespaces.yaml
+++ b/k8s/namespaces/namespaces.yaml
@@ -82,3 +82,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: photoprism
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: archivebox
