--- a/k8s/apps/archivebox/deployment.yaml
+++ b/k8s/apps/archivebox/deployment.yaml
@@ -34,7 +34,13 @@ spec:
           volumeMounts:
             - name: archivebox-data
               mountPath: /data
-          resources: {}
+          resources:
+            requests:
+              cpu: 100m
+              memory: 100Mi
+            limits:
+              cpu: 500m
+              memory: 500Mi
       volumes:
         - name: archivebox-data
           persistentVolumeClaim:
