--- a/k8s/apps/archivebox/kustomization.yaml
+++ b/k8s/apps/archivebox/kustomization.yaml
@@ -5,6 +5,6 @@ resources:
   - deployment.yaml
   - service.yaml
   - pvc.yaml
-  - image-policy.yaml
+  # - image-policy.yaml
   - ./oauth2-proxy
   - ./fess
