--- a/k8s/apps/archivebox/deployment.yaml
+++ b/k8s/apps/archivebox/deployment.yaml
@@ -14,6 +14,10 @@ spec:
       labels:
         app: archivebox
     spec:
+      securityContext:
+        runAsUser: 911
+        runAsGroup: 911
+        fsGroup: 911
       initContainers:
         - name: archivebox-init
           image: archivebox/archivebox:0.7.2 # {"$imagepolicy": "archivebox:archivebox"}
