--- a/k8s/apps/archivebox/deployment.yaml
+++ b/k8s/apps/archivebox/deployment.yaml
@@ -63,3 +63,12 @@ spec:
         - name: archivebox-data
           persistentVolumeClaim:
             claimName: archivebox
+      nodeAffinity:
+        preferredDuringSchedulingIgnoredDuringExecution:
+        - weight: 1
+          preference:
+            matchExpressions:
+              - key: kubernetes.io/arch
+                operator: In
+                values:
+                  - amd64
