--- a/k8s/apps/samba-backup/kustomization.yaml
+++ b/k8s/apps/samba-backup/kustomization.yaml
@@ -7,6 +7,7 @@ labels:
     app: samba-backup
 resources:
   - cronjob.yaml
+  - externalsecret.yaml
 configMapGenerator:
   - name: samba-backup-script
     files:
