--- a/k8s/apps/samba-backup/cronjob.yaml
+++ b/k8s/apps/samba-backup/cronjob.yaml
@@ -37,6 +37,9 @@ spec:
                 subPath: backup.sh
               - name: samba-local-dir
                 mountPath: /samba-share
+              - name: samba-id-ed25519
+                mountPath: /root/.ssh/id_ed25519
+                subPath: id_ed25519
           volumes:
             - name: samba-backup-script
               configMap:
@@ -48,5 +51,9 @@ spec:
               hostPath:
                 path: /mnt/data/share
                 type: Directory
+            - name: samba-id-ed25519
+              secret:
+                secretName: samba-backup-secret
+                defaultMode: 0600
           nodeSelector:
             kubernetes.io/hostname: cake
