適当に readinessProbeを追加してみる

--- a/k8s/apps/samba-backup/cronjob.yaml
+++ b/k8s/apps/samba-backup/cronjob.yaml
@@ -23,6 +23,11 @@ spec:
                   secretKeyRef:
                     name: samba-backup-secret
                     key: id_ed25519
+            readinessProbe:
+              exec:
+                command:
+                - cat
+                - /tmp/healthy
             resources:
               requests:
                 cpu: 100m
