--- a/k8s/apps/kourier/kustomization.yaml
+++ b/k8s/apps/kourier/kustomization.yaml
@@ -5,6 +5,6 @@ resources:
 patches:
 - target:
     kind: Service
-    name: kourier-internal
+    name: kourier
     namespace: kourier-system
-  path: set-lb-ip.yaml
+  path: internal-service.yaml
