--- a/k8s/apps/kourier/ingress.yaml
+++ b/k8s/apps/kourier/ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: kourier
+  namespace: kourier-system
 spec:
   ingressClassName: "nginx"
   rules:
