--- a/k8s/apps/external-dns/deployment.yaml
+++ b/k8s/apps/external-dns/deployment.yaml
@@ -38,3 +38,5 @@ spec:
             limits:
               cpu: 500m
               memory: 512Mi
+      nodeSelector:
+        kubernetes.io/arch: amd64
