--- a/k8s/apps/kourier/ingress.yaml
+++ b/k8s/apps/kourier/ingress.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   ingressClassName: "nginx"
   rules:
-    - host: "*.knative.example.com"
+    - host: "*.knative.walnuts.dev"
       http:
         paths:
           - path: /
