--- a/k8s/apps/letsencrypt/stg.yaml
+++ b/k8s/apps/letsencrypt/stg.yaml
@@ -4,7 +4,7 @@ metadata:
   name: letsencrypt-stg
 spec:
   acme:
-    server: https://acme-v02.api.letsencrypt.org/directory
+    server: https://acme-staging-v02.api.letsencrypt.org/directory
     email: "r.juglans.1018@gmail.com"
     privateKeySecretRef:
       name: letsencrypt-stg
