--- a/k8s/apps/kourier/kustomization.yaml
+++ b/k8s/apps/kourier/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - https://github.com/knative/net-kourier/releases/download/knative-v1.14.0/kourier.yaml
-  - ingress.yaml
+  # - ingress.yaml
 patches:
 - target:
     kind: Service
