add externaldns skip

--- a/k8s/apps/external-dns/deployment.yaml
+++ b/k8s/apps/external-dns/deployment.yaml
@@ -21,6 +21,7 @@ spec:
             - --source=ingress
             - --domain-filter=walnuts.dev
             - --provider=cloudflare-tunnel
+            - --annotation-filter=walnuts.dev/externaldns.skip notin (true)
           env:
             - name: CF_API_TOKEN
               valueFrom:
